--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    overflow: hidden;
 }
 
 .container {
@@ -109,6 +110,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    opacity: .2;
 }
 
 .centered h1 {
@@ -159,12 +161,15 @@ body {
 .bottom-left {
     background-color: #0a0f1f;
     color: white;
+    margin: 30px;
+    margin-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .top-heading {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
 .top-heading a {
@@ -182,8 +187,8 @@ body {
 
 .card {
     height: 90px;
-    width: 250px;
-    border: 1px solid red;
+    width: 200px;
+    border: none;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -191,6 +196,8 @@ body {
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 10px;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
 
 #pop {
@@ -219,13 +226,124 @@ body {
 
 .bottom-right {
     background-color: aliceblue;
+    position: relative;
+    background-color: #0a0f1f;
+    padding: 0 10px;
+    margin-top: 30px;
+    border-radius: 5px;
+    /* overflow: hidden; */
+
+}
+
+.botton-heading {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px;
+    color: white;
+
+}
+
+#dog {
+    width: 50px;
+}
+
+.first-line {
+    display: flex;
+    gap: 50px;
+    margin: 20px;
+}
+
+.first-line h2 {
+    color: white;
+}
+
+.name #title-song {
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 700;
+}
+
+.name #title-song+p {
+    color: grey
+}
+
+.push-via {
+    display: flex;
+    justify-content: end;
+    gap: 20px;
+    /* margin-right: 10px; */
+    text-align: center;
+    /* align-items: flex-start; */
+}
+
+.push-via p {
+    color: #fff;
+}
+
+#play {
+    color: #4169e1;
+}
+
+#star {
+    color: white;
 }
 
 
 
 
 
-
 .end {
-    background-color: white;
+    background-color: rgb(20, 19, 19);
+}
+
+.top-proj {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    align-items: center;
+    color: white;
+    margin: 5px;
+}
+
+.top-proj img {
+    border-radius: 50%;
+}
+
+.namw {
+    border: none;
+    height: 40px;
+    width: 70px;
+    background-color: #333333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.bottom-proj {
+    background-color: #000;
+}
+
+.bottom-proj .heading {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    margin: 20px;
+}
+
+.image-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.image-div img {
+    width: 200px;
+    border-radius: 20px;
+}
+
+.image-div h2 {
+    font-size: 2rem;
 }
